general/tests/MTest5.toolbox/Model_1a/MC.tla
---- MODULE MC ----
EXTENDS MTest5, TLC

\* Specification formula
spec_124951497680633000 ==
Init /\[][ Next1a ]_<<x, y>> 
----
====
\* Generated at Wed Aug 05 16:29:36 PDT 2009